RESOLVED FIXED10188
Form elements added via appendChild() are not accessible via form.element
https://bugs.webkit.org/show_bug.cgi?id=10188
Summary Form elements added via appendChild() are not accessible via form.element
Brian Hartsock
Reported 2006-08-01 12:03:46 PDT
**Steps to reproduce This bug is very similar to Bug 3481, except reproducing it is a little different. To properly reproduce this bug, the form must be an orphan that has not yet been added to the document.body. I used appendChild() instead of innerHTML in my test case, but the same results occur with innerHTML. See attachment for testcase. **Version Safari version: 2.0.4 (419.3) **Other browsers Works in IE and Firefox
Attachments
Testcase (606 bytes, text/html)
2006-08-01 12:04 PDT, Brian Hartsock
no flags
First attempt (3.09 KB, patch)
2006-12-08 08:08 PST, Rob Buis
no flags
fixing testcase (3.13 KB, patch)
2006-12-08 08:28 PST, Rob Buis
mjs: review+
Brian Hartsock
Comment 1 2006-08-01 12:04:25 PDT
Created attachment 9796 [details] Testcase
David Kilzer (:ddkilzer)
Comment 2 2006-08-01 12:45:38 PDT
(In reply to comment #0) > **Version > Safari version: 2.0.4 (419.3) The "419.3" here is actually the Safari build, not the WebKit build. The WebKit build is 418.8 for this version of Safari: http://developer.apple.com/internet/safari/uamatrix.html Brian, please try the nightly WebKit builds to see if the issue is already fixed in Subversion, and report back here. http://nightly.webkit.org/ Thanks for taking the time to report this bug, and for creating a reduced test case!
David Kilzer (:ddkilzer)
Comment 3 2006-08-01 12:47:20 PDT
(In reply to comment #0) > **Version > Safari version: 2.0.4 (419.3) Also note that the Safari version and build numbers DO NOT change when running with the WebKit nightly builds! You must get the WebKit nightly build version (rNNNNN) off the DMG name. Please report which version of the WebKit nightly, too!
Brian Hartsock
Comment 4 2006-08-01 12:59:07 PDT
Fails on nightly build as well. Nightly build version: r15731
Mark Rowe (bdash)
Comment 5 2006-08-02 00:32:34 PDT
Confirmed with both WebKit r15750 and 418.8. Works as expected in Firefox.
Rob Buis
Comment 6 2006-12-08 08:08:18 PST
Created attachment 11773 [details] First attempt This is one way of fixing the problem. Since I am not sure about how the document versions should work, I may need some more guidance :) Cheers, Rob.
Rob Buis
Comment 7 2006-12-08 08:28:36 PST
Created attachment 11774 [details] fixing testcase As Mitz pointed out, the testcase was way off, I was cleaning up code, but removed too much... Cheers, Rob.
Maciej Stachowiak
Comment 8 2006-12-08 15:15:07 PST
Comment on attachment 11774 [details] fixing testcase r=me
Rob Buis
Comment 9 2006-12-08 15:55:15 PST
Landed in r18090.
Note You need to log in before you can comment on or make changes to this bug.