        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=10188
        Form elements added via appendChild() are not accessible via form.element

        Make sure looking up form elements works when the form is not appended
        to the document.



Canonical link: https://commits.webkit.org/15179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18090 268f45cc-cd09-0410-ab3c-d52691b4dbfc